[HPRD-345] spinner scrollbar fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@69988 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/viewallPopup.css
+++ b/projects/Media/docroot/assets/css/global/viewallPopup.css
@@ -4,7 +4,7 @@
 }
 
 #viewallPopup.overlay .overlay-content {
-  min-height: 175px;
+  min-height: 200px;
   min-width: 300px;
   max-height: 80%;
   margin-bottom: 0;
